# workout_tracker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
.sqlx/: query-0247252b23c226a83cb7cf0d8301be6fb246b2416463b7822dc7fc957c7ecd36.json  query-1b5057239d8019a0af8e9ffde5524a8230c7311a20eaaf3adef30e495fe4d8e5.json  query-2c02fd2a1d2081a11548ab88b1ac4095ae7f4302752b49fa06b18c42e08fbbdb.json  query-833d492ea17069196e22d919e2f7f38ed9fd540c4ab81792dc154a10036d6084.json  query-8dc9c5f4b3e63c31b1288ad59c0613aa0b69a912fe13eea0df6279138307ef81.json  query-8eda486e26e008ab1f4c19706e8d2cc44774c95a2a623334056092a68b8ccc51.json  query-d4e69722cb52ff1da9bd0b43736c705f743bf48641c55e247d93e1bf43eb3a69.json
migrations/: 20260304134858_create_workouts.sql  20260311115338_create_users.sql  20260313105206_add_user_id_to_workouts.sql
src/: auth.rs  auth_handlers.rs  cache.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  queue.rs  repository.rs  user_repository.rs
tests/: integration_test.rs
