[package]
name = "workout-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
bcrypt = "0.15"
redis = { version = "0.27", features = ["tokio-comp"] }
lapin = "2"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "workout_tracker"
path = "src/lib.rs"